# boxerp-svn

branches/examples/20050809_gui/: README.txt
branches/examples/20050810_postgres1/: Makefile  README.txt
branches/examples/20050811_remote_postgres/: PostgresObject.cs  SampleServer.cs
branches/examples/20050811_remoteserver1/: Makefile  SampleClient.cs
branches/examples/20050812_remoteserver2/: SampleClient.cs
branches/examples/20050816_delegados/: Delegados.cs
branches/examples/20050817_objetos_login_accessController1/: AccessController.cs  LoginObject.cs  README.txt
branches/examples/20050818_postgres2/: database.cs
branches/examples/20050819_remoteserver4/: ObjetoRemoto.cs
branches/examples/20050820_hashtable/: Hashtable.cs
branches/examples/20050829_remoting/: Makefile  ServerObject.cs
branches/examples/20050829_remoting2/: Readme.txt  SampleServer.cs
branches/examples/20050901_notebook/: main.cs
branches/examples/20050914_nunit/: cuenta.cs  cuentaTest.cs
branches/examples/20050921_treeview/: Readme.txt  compilar.bat  compilar.sh  tree.cs  tree.glade  tree.gladep
branches/examples/20050923_reflection/: test_assembly.cs
branches/examples/20050926_httpChannel/: README.txt  SampleClient.cs  SampleClient2.cs
branches/examples/20050928_remoteserver6/: Makefile  README.txt
branches/examples/20050930_NpgsqlTransactions/: Database.cs
branches/examples/20050930_configFileRemoting/: server.config
branches/examples/20051025_reflection/: Info.cs
branches/examples/20051106_i18n/: i18n.pot
branches/examples/20060109_httpChannelConfig/: SampleClient.cs
branches/old-0.1/: COPYING  Makefile.am  README  autogen.sh
branches/old-0.1/client/: EnterprisesWindow.cs  GuiTreeview.cs  MainWindow.cs  UsersWindow.cs
branches/old-0.1/client/gui/: gui_index.xml
branches/old-0.1/client/gui/glade/: editEnterprise.glade  main.glade  users.glade
branches/old-0.1/database/: Database.cs  GenericDatabase.cs  MysqlDatabase.cs  bd1.dia
branches/old-0.1/doc/: AccessController.dia
branches/old-0.1/server/: LoginService.cs  ObjectsServer.cs  Users.cs  clientRemoting.config  serverRemoting.config
branches/old-0.1/server/Models/: Enterprise.cs  Group.cs  Permission.cs
branches/old-0.1/test/: AdminTest2.cs
trunk/: AUTHORS  BSDLicense.rtf  Boxerp.boobs  COPYING
trunk/develop/: Defines.cs.in  build_client.sh  web.config
trunk/develop/client/: BoxerpWindow.cs  EditEnterpriseWindow.cs  GuiTools.cs  LoginWindow.cs
trunk/develop/database/: inserts.sql  schema.sql
trunk/develop/doc/: Client1.dia  Distribucion3.dia  Distribution1.dia  Distribution2.dia
trunk/develop/po/: es.po
trunk/develop/server/: AdminFacade.cs  DebugTools.cs  Enterprises.cs  ErrorManager.cs  Groups.cs  ServerExceptions.cs  ServicesTools.cs  SessionsObject.cs  database.config  serverRemoting.config
trunk/develop/src/: AUTHORS  INSTALL  Makefile.am  NEWS  aclocal.m4  admin.asmx  configure  configure.in  libtool  login.asmx
trunk/develop/src/autom4te.cache/: output.0  requests  traces.0
trunk/develop/src/client/: BoxerpWindow.cs  Client.cs  ClientExceptions.cs  EditGroupWindow.cs  EditUserWindow.cs  GroupsWindow.cs  GuiExtractor.cs  MainWindow.cs
trunk/develop/src/client/gui/asiface/: users.asiface
trunk/develop/src/client/gui/glade/: editGroup.glade  editUser.glade  enterprises.glade  login.glade
trunk/develop/src/po/: POTFILES  POTFILES.in
trunk/develop/src/server/: AdminFacade.cs  ConcurrencyControllerObject.cs  DataTools.cs  FacadeCache.cs  HistoryObject.cs  ObjectsServer.cs  database.config
trunk/develop/test/: AdminTest.cs  FacadeCacheMyTest.cs
trunk/examples/20050810_postgres1/: postgres1.cs
trunk/examples/20050811_remote_postgres/: SampleClient.cs
trunk/examples/20050811_remoteserver1/: PostgresObject.cs
trunk/examples/20050812_remoteserver2/: AccessController.cs  Makefile  README.txt  SampleServer.cs
trunk/examples/20050813_remoteserver3/: AccessController.cs  SampleClient.cs
trunk/examples/20050817_objetos_login_accessController1/: Database.cs  Makefile
trunk/examples/20050819_remoteserver4/: README.txt  SampleClient.cs
trunk/examples/20050820_hashtable/: README.txt
trunk/examples/20050829_remoting/: SampleServer.cs
trunk/examples/20050829_remoting2/: SampleClient.cs
trunk/examples/20050921_dictionaries/: NestedDictionaries.cs
trunk/examples/20050923_reflection/: test.cs
trunk/examples/20050923_remoteserver5/: SampleClient.cs
trunk/examples/20050926_httpChannel/: ObjetoRemoto.cs  SampleServer.cs
trunk/examples/20050928_remoteserver6/: ObjetoRemoto.cs  SampleClient.cs  SampleServer.cs
trunk/examples/20050930_configFileRemoting/: SampleServer.cs  client.config
trunk/examples/20051106_i18n/: Example.cs  es.po
trunk/examples/20060109_httpChannelConfig/: client.config  server.config
trunk/src/: Exported-2007-09-21.vssettings
trunk/src/Assemblies/: Boxerp.Client.GtkSharp.Controls.dll.mdb  Boxerp.Client.GtkSharp.dll.mdb  Boxerp.Client.dll.mdb
trunk/src/BoxerpClientInstaller/: BoxerpClientInstaller.sln
trunk/src/WindowsInstallers/: BoxerpClientInstaller.msi
trunk/src/boxerpMainMDSolution/: boxerpMainMDSolution.mds
trunk/src/boxerpMainVSsolution/: boxerp-2008.sln  boxerpMainVSsolution.sln
trunk/src/client-gtksharp/: client-gtksharp.mds  client-gtksharp.userprefs
trunk/src/client-lib/: client-base.mds  client-base.userprefs  client-lib.mds  client-lib.sln  client-lib.userprefs  doxygen.config  gtksharp.mds  gtksharp.userprefs
trunk/src/client-text/: Client.cs  Makefile  readme.txt
trunk/src/dependencies/: Castle.ActiveRecord.xml  Castle.Components.Validator.xml  Castle.Core.xml  Castle.MicroKernel.xml  Castle.MonoRail.Framework.xml  Castle.MonoRail.Views.Brail.xml  DEPENDENCIES.txt
trunk/src/doc/: adminGUI.txt  devel-guidelines.txt  genericUseCases.txt  ideas.txt
trunk/src/server/: AdminObject.cs  ConcurrencyControllerObject.cs  ConcurrencyManager.cs  FacadeCache.cs  HistoryObject.cs  IAdmin.cs  ILogin.cs  LoggerManager.cs  LoginObject.cs  Makefile  ObjectsServer.cs  SchemaGenerator.cs  ServerExceptions.cs  log.txt  (+8 more)
(+894 files in other folders)
